--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,6 +1,6 @@
 /* Select the image with a class of kitty-1 */
 
-/*__write_selector_here__*/ 
+/*__write_selector_here__*/
 #kitty-1 {
   position: absolute;
   z-index: 1;
@@ -10,7 +10,7 @@
 
 /* Select the image with id of kitty-2 */
 
-/*__write_selector_here__*/ 
+/*__write_selector_here__*/
 #kitty-2
 {
   position: absolute;
@@ -31,7 +31,7 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*__write_selector_here__*/ 
+/*__write_selector_here__*/
 #player1{
   position: absolute;
   z-index: 4;
@@ -41,7 +41,8 @@
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/
+#kitty-5 {
   position: absolute;
   z-index: 3;
   top: 217px;
