--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,7 +1,7 @@
 /* Select the image with a class of kitty-1 */
 
 /*__write_selector_here__*/
-#kitty-1 
+#kitty-1
 {
   position: absolute;
   z-index: 1;
@@ -23,7 +23,7 @@
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
 /*__write_selector_here__*/
-#basket {
+#kitty-3 {
   position: absolute;
   z-index: 5;
   top: 291px;
