--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -43,7 +43,7 @@
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/
-.images/kitty-5.png {
+#images/kitty-5.png {
   position: absolute;
   z-index: 3;
   top: 217px;
