--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -22,7 +22,7 @@
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
 /*__write_selector_here__*/
-#basket {
+#basket img {
   position: absolute;
   z-index: 5;
   top: 291px;
@@ -32,7 +32,7 @@
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/
-#ball
+#ball + img
 {
   position: absolute;
   z-index: 4;
@@ -43,7 +43,7 @@
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/
-#images/kitty-5.png {
+#img[kitty-5.png] {
   position: absolute;
   z-index: 3;
   top: 217px;
